# gtk-cross-platform

./: .editorconfig  .gitattributes  .gitignore  .typos.toml  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  SECURITY.md  build.rs  com.example.GtkCrossPlatform.json  deny.toml  meson.build  meson_options.txt
.claude/: settings.json
.claude/agents/: build--environment-inspector.md  build--migration-inspector.md  craft--coverage-synthesizer.md  craft--environment-inspector.md  craft--knowledge-writer.md  craft--migration-inspector.md  craft--quality-inspector.md  craft--schema-designer.md  domain--event-modeler.md  meta--knowledge-writer.md  ops--distribution-auditor.md  ops--incident-coordinator.md  ops--supply-chain-auditor.md  ops--throughput-analyzer.md  pipeline--work-coordinator.md  plan--work-coordinator.md  release--distribution-auditor.md  release--incident-coordinator.md  release--supply-chain-auditor.md  release--throughput-analyzer.md  verify--coverage-synthesizer.md  verify--quality-inspector.md
.claude/backup/2026-04-28/: settings.json  settings.local.json
.claude/backup/2026-04-28/commands/: add-quality-gates.md  add-runtime-driver.md  apply-conceptual-improvements.md  compliance-audit.md  docs-audit.md  github-audit.md  hexagonal-refactor.md  implement-container-ui.md  plan-content-improvements.md  redesign-claude-setup.md  redesign-makefile.md  refactor-components.md  (+2 more)
.claude/commands/: add-quality-gates.md  apply-conceptual-improvements.md  apply-docs-fixes.md  apply-requester-patterns.md  cleanup-code.md  concept-audit.md  content-audit.md  coverage-analysis.md  create-prompt.md  dist-audit.md  docs-audit.md  hexagonal-refactor.md  implement-v02-mvp.md  knowledge-audit.md  knowledge-planning.md  optimize-dashboard-loading.md  redesign-claude-setup.md  redesign-workflows.md  release-audit.md  scaffold-oss-docs.md  structural-improvement.md  sync-pull-request.md  test-quality-guardrail.md  testing-audit.md  tooling-design.md  update-gitignore.md
.claude/docs/reference/: adwaita.md  gtk-sources.md
.claude/hooks/lib/: circuit-breaker.sh  heuristic.sh  injector.sh  layer-detector.sh
.claude/prompts/: INDEX.md  diagnose-why-containers-are-visible-in.md  migrate-gtk4-adwaita-xml-to-blueprint.md
.claude/rules/domain/: container-management.md
.claude/rules/standards/: accessibility.md  context-feedback.md  interface.md  language.md  makefile.md  observability.md  verification.md
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  editorconfig.yml  flatpak.yml  release.yml
data/: com.example.GtkCrossPlatform.desktop  com.example.GtkCrossPlatform.gschema.xml  com.example.GtkCrossPlatform.metainfo.xml  meson.build
data/resources/: resources.gresource.xml  style-dark.css  style.css  window.blp  window.ui
docs/: compliance-plan.md  conceptual-improvements.md  gtk-sources.md  test-quality-audit.md
packaging/macos/: Info.plist  gtk-cross-platform-launcher
po/: LINGUAS  POTFILES  ar.po  bn.po  de.po  es.po  fr.po  gtk-cross-platform.pot  hi.po  id.po  it.po  ja.po  ko.po  meson.build  mr.po  pt_BR.po  ru.po  sw.po  ta.po  te.po  tr.po  ur.po  vi.po  zh_CN.po
src/: app.rs  config.rs  lib.rs  main.rs
src/core/: mod.rs
src/core/domain/: container.rs  image.rs  mod.rs  network.rs  volume.rs
src/core/use_cases/: container_use_case.rs  greet_use_case.rs  image_use_case.rs  mod.rs  network_use_case.rs  volume_use_case.rs
src/infrastructure/: mod.rs
src/infrastructure/containers/: background.rs  containerd_driver.rs  docker_driver.rs  dynamic_driver.rs  error.rs  factory.rs  host_stats.rs  http_over_unix.rs  mock_driver.rs  mod.rs  podman_driver.rs
src/infrastructure/greeting/: greeting_service.rs  mod.rs
src/infrastructure/logging/: app_logger.rs  mod.rs
src/ports/: i_container_driver.rs  i_greeting_service.rs  mod.rs
src/ports/use_cases/: i_container_use_case.rs  i_image_use_case.rs  i_network_use_case.rs  i_volume_use_case.rs  mod.rs
src/window/: actions.rs  main_window.rs  mod.rs
src/window/components/: confirm_dialog.rs  detail_pane.rs  empty_state.rs  list_factory.rs  mod.rs  resource_row.rs  status_badge.rs  toast_util.rs
src/window/objects/: container_object.rs  image_object.rs  mod.rs  network_object.rs  volume_object.rs
src/window/utils/: format.rs  mod.rs  store.rs
src/window/views/: containers_view.rs  dashboard_view.rs  images_view.rs  mod.rs  networks_view.rs  volumes_view.rs
tests/: cancellable_test.rs  compose_grouping_test.rs  compose_lifecycle_test.rs  container_driver_test.rs  container_lifecycle_test.rs  container_logs_test.rs  container_stats_test.rs  create_container_test.rs  dashboard_test.rs  env_masking_test.rs  greet_use_case_test.rs  i18n_test.rs  image_layers_test.rs  inspect_test.rs  meson.build  pull_image_streaming_test.rs  pull_image_test.rs  runtime_switcher_test.rs  search_filter_test.rs  system_events_test.rs  terminal_test.rs  widget_test.rs
tests/support/: mod.rs
(+47 files in other folders)
